<resources>
    <string name="app_name">Tree Guardians</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Firstname Lastname</string>
    <string name="nav_header_subtitle">Tree Expert</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_map">Charlton Kings Map</string>
    <string name="menu_tree_list">Tree List</string>
    <string name="menu_guided_walks">Guided Walks</string>
    <string name="menu_games">Games</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="menu_admin">Admin</string>
    <string name="menu_logout">Log Out</string>
    <string name="map">MAP</string>
    <string name="map_icon">map icon</string>
    <string name="map_image">Map Image</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="location_text">Waiting for permission…</string>
    <string name="add_tree">Add Tree</string>
    <string name="location_permission_needed">Location Permission Needed</string>
    <string name="location_permission_alert_msg">This app requires your location to get the tree location</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="button">Get Location</string>
    <string name="get_camera_btn">Take a picture</string>
    <string name="health">Health</string>
    <string name="height_circ">Height | Circ</string>
    <string name="species">Species</string>
    <string name="unhealthy">Unhealthy</string>
    <string name="healthy">Healthy</string>
    <string name="please_walk_to_the_base_of_the_tree_nthen_press_get_location">Please walk to the base of the tree\nThen press GET LOCATION</string>
    <string name="next">NEXT</string>
    <string name="circumferance">Circumference</string>
    <string name="height">Height</string>
    <string name="please_enter_more_details_about_the_tree">Please enter more details about the tree:</string>
    <string name="don_t_worry_if_you_cant_enter_everything">Don\'t worry if you can\'t enter everything</string>
    <string name="previous">PREVIOUS</string>
    <string name="add_images_of_your_new_tree">Add images of your new tree</string>
    <string name="finish">Finish</string>

    <!-- Formatting for tree list -->
    <string name="tree_details_format">Height: %1$s | Circumference: %2$s | Status: %3$s</string>
    <!-- This formatting can be changed later,
    we can perhaps use a photo of the leaf from each tree-->
    <string name="tree_species_format">%1$s 🌳</string>
</resources>