<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_tree_list"
            android:icon="@drawable/ic_baseline_list_24"
            android:title="@string/menu_tree_list" />
        <item
            android:id="@+id/nav_guided_walks"
            android:icon="@drawable/ic_baseline_directions_walk_24"
            android:title="@string/menu_guided_walks" />
        <item
            android:id="@+id/nav_games"
            android:icon="@drawable/ic_menu_outline_add_reaction_24"
            android:title="@string/menu_games" />
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_my_profile" />
        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/ic_baseline_admin_panel_settings_24"
            android:title="@string/menu_admin" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/menu_logout" />

    </group>
</menu>